# quickScreener

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  .gitignore  CLAUDE.md  alembic.ini  main.py  pyproject.toml
apps/api/app/api/v1/auth/: router.py  schemas.py  service.py
apps/api/app/api/v1/tenants/: router.py
apps/api/app/celery_app/: beat_schedule.py  celery.py
apps/api/app/celery_app/tasks/: auth_tasks.py
apps/api/app/core/: config.py  email.py  idp_client.py  permissions.py  rbac.py  redis_client.py  security.py  token_store.py
apps/api/app/core/middleware/: auth.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 001_create_tenants.py  002_create_users.py  003_create_user_sessions.py  004_create_mfa_enrollments.py
apps/api/app/models/: mfa_enrollment.py  tenant.py  user.py  user_session.py
apps/api/app/repositories/: base.py  tenant.py  user.py  user_session.py
apps/api/app/sockets/: middleware.py
apps/api/app/sockets/namespaces/: crm.py  interview.py  proctor.py  recruiter.py  screener.py
apps/api/app/tests/integration/: test_auth_routes.py
apps/api/app/tests/socket/: test_auth_socket_middleware.py
apps/api/app/tests/unit/: test_permissions.py  test_security.py
apps/candidate/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: CLAUDE.md  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  (+2 more)
k8s/: .gitignore
scripts/: dev.sh  gen-jwt-keys.sh
terraform/: .gitignore
(+38 files in other folders)
